apps/media/radarr/ingressroute-radarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.xrs444.net`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
